--- a/frontend/src/pages/AnimalDetail.css
+++ b/frontend/src/pages/AnimalDetail.css
@@ -1,10 +1,12 @@
 .animal-detail-container {
-  max-width: 700px;
+  max-width: 100%;
   margin: 40px auto;
   padding: 20px;
 }
 
+
 .animal-card {
+  width: 100%;
   display: flex;
   gap: 20px;
   align-items: flex-start;
@@ -15,20 +17,89 @@
 }
 
 .animal-img {
-  width: 220px;
+  width: 300px;
   height: 220px;
   object-fit: cover;
   border-radius: 10px;
 }
 
+.spacer {
+  width: 100%;
+  height: 400px;
+  display: flex;
+  justify-content: space-around;
+  padding: 5px;
+}
+.animal-info {
+  padding: 5px;
+  gap: 10px;
+  height: 100%;
+  width: 33%;
+  border-radius: 15px;
+  background-color: #c4bebe;
+  display: inline;
+  justify-content: flex-start;
+  
+  
+}
 .animal-info h2 {
+  font-size: 21px;
+  color: black;
   margin-top: 0;
+}
+
+.animal-info p {
+  color: black;
+  width: 21px;
+  font-size: 21px;
+  margin: 15px 0;
 }
 
 .descricao {
   white-space: pre-line;
   margin-top: 8px;
 }
+.localidade {
+  padding: 5px;
+  gap: 10px;
+  height: 100%;
+  width: 33%;
+  border-radius: 15px;
+  background-color: #c4bebe;
+  display: inline;
+  justify-content: flex-start;
+}
+.veterinary {
+  padding: 5px;
+  gap: 10px;
+  height: 100%;
+  width: 33%;
+  border-radius: 15px;
+  background-color: #c4bebe;
+  display: inline;
+  justify-content: flex-start;
+}
+
+.contact-doador{
+
+  display: flex;
+  justify-content: center;
+  margin-top: 270px;
+}
+.cont-do { 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  width: 250px;
+  height: 60px;
+  background-color: #4CAF50;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
 
 .btn-voltar {
   display: inline-block;
