--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -13,9 +13,10 @@
 }
 
 .navbar-logo {
+  text-decoration: none;
+  color: inherit;
+  font-size: 1.5rem;
   font-weight: bold;
-  font-size: 1.2rem;
-  color: #2c3e50;
 }
 
 .navbar-links {
